envoy_client.yaml
node:
    cluster: client-egress
    id: id
  
static_resources:
    listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 9999 }
      filter_chains:
      - filters:     
        - name: envoy.filters.network.http_connection_manager
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager      
            stat_prefix: egress_grpc
            codec_type: AUTO
            route_config:
              name: local_route
              virtual_hosts:
              - name: local_service
                domains: ["*"]
                routes:
                - match: 
                    prefix: "/"
                    headers:
                      name: originalHost
                      string_match:
                        exact: server-1
                  route:
                    cluster: service_1
                - match: 
                    prefix: "/"
                    headers:
                      name: originalHost
                      string_match:
                        exact: server-2
                  route:
                    cluster: service_2
            http_filters:
            - name: envoy.filters.http.grpc_stats
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_stats.v3.FilterConfig
                stats_for_all_methods: true
                enable_upstream_stats: true
            - name: envoy.filters.http.router
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router                  

    clusters:
    - name: service_1
      connect_timeout: 2s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      http2_protocol_options: {}      
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: service_1
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: server-1-ingress
                  port_value: 4443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          common_tls_context:
            validation_context:
              match_subject_alt_names:
                exact: "server.domain.com"
              trusted_ca:
                filename: "/certs/ca.crt"
    - name: service_2
      connect_timeout: 2s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      http2_protocol_options: {}      
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: service_2
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: server-2-ingress
                  port_value: 4443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          common_tls_context:
            validation_context:
              match_subject_alt_names:
                exact: "server.domain.com"
              trusted_ca:
                filename: "/certs/ca.crt"
